--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,26 @@
-* {
-	margin: 0px;
+.row {
+	/* margin: 0px!important; */
 	padding: 0px;
 }
+
 .navbar {
 	height: 70px;
 	background-color: #a0a0f9;
 	width: 100%;
 }
+.photofolio-logo-div img {
+	height: 40px;
+	margin-right: 10px;
+}
 .photofolio-logo-div {
-	width: 20px;
-	height: 20px;
-	background-color: antiquewhite;
+	/* width: 20px; */
+	/* height: 20px; */
+	margin-left: 30px;
+	padding: 3px 7px;
+	font-weight: 900;
+	border-radius: 15px;
+	/* background-color: antiquewhite; */
+	font-size: 1.6rem;
 }
 
 .album-view {
@@ -21,12 +31,19 @@
 
 .createAlbumFormDiv,
 .createImageFormDiv {
-	height: 140px;
+	/* height: 140px; */
 	margin: 20px 0px;
+	padding: 15px !important;
 	background-color: rgba(211, 211, 211, 0.603);
 	border-radius: 18px;
 }
 
+input,
+button {
+	height: 40px;
+	border-radius: 10px;
+	margin: 10px 0px;
+}
 .albums-titlebar {
 	/* display: flex;
   width: 70%;
@@ -49,6 +66,7 @@
 	flex-direction: column;
 	padding: 5px;
 	cursor: pointer;
+	transition: 0.2s;
 }
 
 .album-card:hover {
@@ -82,9 +100,57 @@
 	background-size: cover;
 	border-radius: 5px 5px 0px 0px;
 	display: flex;
-	/* width: 40%; */
-	margin: 2px;
+	box-shadow: 0px 0px 2px 0px black;
+	flex-direction: column;
+	padding: 0;
+	cursor: pointer;
+	margin: 7px;
 	justify-content: center;
+	overflow: hidden;
+	transition: 0.2s;
+}
+.image-div:hover {
+	box-shadow: 0px 0px 4px 0px black;
+}
+.imgDiv {
+	height: 90%;
+	overflow: hidden;
+}
+.image-div img {
+	width: 100%;
+	z-index: 5;
+	position: relative;
+}
 
-	background-color: rgb(63, 88, 109);
+.image-title {
+	z-index: 10;
+	position: relative;
+	background-color: lightblue;
+	text-align: center;
+	font-size: 1.1rem;
+}
+
+.cancel-btn,
+.back-btn,
+.butn {
+	width: 110px;
+	height: 35px;
+	background-color: aliceblue;
+	transition: 0.1s;
+}
+.butn:hover {
+	box-shadow: 0px 0px 2px 0px black;
+}
+
+.images-titlebar {
+	margin: 20px 0px;
+}
+.album-name-images {
+	line-height: 30px;
+	font-size: 1.6rem;
+	font-weight: 500;
+}
+
+.carousel-img {
+	height: 650px;
 }
